@@ -27,8 +27,13 @@
 
 #include "gmime-stream-file.h"
 
+static void g_mime_stream_file_base_class_init (GMimeStreamFileClass *klass);
+static void g_mime_stream_file_base_class_finalize (GMimeStreamFileClass *klass);
+static void g_mime_stream_file_class_init (GMimeStreamFileClass *klass);
+static void g_mime_stream_file_init (GMimeStreamFile *stream, GMimeStreamFileClass *klass);
+static void g_mime_stream_file_destroy (GMimeStreamFile *stream);
+static void g_mime_stream_file_finalize (GObject *object);
 
-static void stream_destroy (GMimeStream *stream);
 static ssize_t stream_read (GMimeStream *stream, char *buf, size_t len);
 static ssize_t stream_write (GMimeStream *stream, char *buf, size_t len);
 static int stream_flush (GMimeStream *stream);
@@ -40,27 +45,95 @@ static off_t stream_tell (GMimeStream *stream);
 static ssize_t stream_length (GMimeStream *stream);
 static GMimeStream *stream_substream (GMimeStream *stream, off_t start, off_t end);
 
-static GMimeStream stream_template = {
-	NULL, 0,
-	1, 0, 0, 0, stream_destroy,
-	stream_read, stream_write,
-	stream_flush, stream_close,
-	stream_eos, stream_reset,
-	stream_seek, stream_tell,
-	stream_length, stream_substream,
-};
+
+static GMimeStreamClass *parent_class = NULL;
+
+
+GType
+g_mime_stream_file_get_type (void)
+{
+	static GType type = 0;
+	
+	if (!type) {
+		static const GTypeInfo info = {
+			sizeof (GMimeStreamFileClass),
+			(GBaseInitFunc) g_mime_stream_file_base_class_init,
+			(GBaseFinalizeFunc) g_mime_stream_file_base_class_finalize,
+			(GClassInitFunc) g_mime_stream_file_class_init,
+			NULL, /* class_finalize */
+			NULL, /* class_data */
+			sizeof (GMimeStreamFile),
+			16,   /* n_preallocs */
+			(GInstanceInitFunc) g_mime_stream_file_init,
+		};
+		
+		type = g_type_register_static (G_TYPE_OBJECT, "GMimeStreamFile", &info, 0);
+	}
+	
+	return type;
+}
 
 
 static void
-stream_destroy (GMimeStream *stream)
+g_mime_stream_file_base_class_init (GMimeStreamFileClass *klass)
 {
-	GMimeStreamFile *fstream = (GMimeStreamFile *) stream;
-	
-	if (fstream->owner && fstream->fp)
-		fclose (fstream->fp);
-	
-	g_free (fstream);
+	/* reset instance specifc methods that don't get inherited */
+	;
 }
+
+static void
+g_mime_stream_file_base_class_finalize (GMimeStreamFileClass *klass)
+{
+	;
+}
+
+static void
+g_mime_stream_file_class_init (GMimeStreamFileClass *klass)
+{
+	GMimeStreamClass *stream_class = GMIME_STREAM_CLASS (klass);
+	GObjectClass *object_class = G_OBJECT_CLASS (klass);
+	
+	parent_class = g_type_class_ref (G_TYPE_OBJECT);
+	
+	object_class->finalize = g_mime_stream_file_finalize;
+	
+	stream_class->read = stream_read;
+	stream_class->write = stream_write;
+	stream_class->flush = stream_flush;
+	stream_class->close = stream_close;
+	stream_class->eos = stream_eos;
+	stream_class->reset = stream_reset;
+	stream_class->tell = stream_tell;
+	stream_class->length = stream_length;
+	stream_class->substream = stream_substream;
+	
+	klass->destroy = g_mime_stream_file_destroy;
+}
+
+static void
+g_mime_stream_file_init (GMimeStreamFile *stream, GMimeStreamFileClass *klass)
+{
+	stream->owner = TRUE;
+	stream->fp = NULL;
+}
+
+static void
+g_mime_stream_file_destroy (GMimeStreamFile *stream)
+{
+	g_signal_handlers_destroy (G_OBJECT (stream));
+}
+
+static void
+g_mime_stream_file_finalize (GObject *object)
+{
+	GMimeStreamFile *stream = (GMimeStreamFile *) object;
+	
+	if (stream->owner && stream->fp)
+		fclose (stream->fp);
+	
+	G_OBJECT_CLASS (parent_class)->finalize (object);
+}
+
 
 static ssize_t
 stream_read (GMimeStream *stream, char *buf, size_t len)
@@ -232,11 +305,11 @@ stream_substream (GMimeStream *stream, off_t start, off_t end)
 {
 	GMimeStreamFile *fstream;
 	
-	fstream = g_new0 (GMimeStreamFile, 1);
+	fstream = g_object_new (GMIME_TYPE_STREAM_FILE, NULL, NULL);
 	fstream->owner = FALSE;
 	fstream->fp = GMIME_STREAM_FILE (stream)->fp;
 	
-	g_mime_stream_construct (GMIME_STREAM (fstream), &stream_template, GMIME_STREAM_FILE_TYPE, start, end);
+	g_mime_stream_construct (GMIME_STREAM (fstream), start, end);
 	
 	return GMIME_STREAM (fstream);
 }
@@ -255,11 +328,11 @@ g_mime_stream_file_new (FILE *fp)
 {
 	GMimeStreamFile *fstream;
 	
-	fstream = g_new (GMimeStreamFile, 1);
+	fstream = g_object_new (GMIME_TYPE_STREAM_FILE, NULL, NULL);
 	fstream->owner = TRUE;
 	fstream->fp = fp;
 	
-	g_mime_stream_construct (GMIME_STREAM (fstream), &stream_template, GMIME_STREAM_FILE_TYPE, ftell (fp), -1);
+	g_mime_stream_construct (GMIME_STREAM (fstream), ftell (fp), -1);
 	
 	return GMIME_STREAM (fstream);
 }
@@ -281,11 +354,11 @@ g_mime_stream_file_new_with_bounds (FILE *fp, off_t start, off_t end)
 {
 	GMimeStreamFile *fstream;
 	
-	fstream = g_new (GMimeStreamFile, 1);
+	fstream = g_object_new (GMIME_TYPE_STREAM_FILE, NULL, NULL);
 	fstream->owner = TRUE;
 	fstream->fp = fp;
 	
-	g_mime_stream_construct (GMIME_STREAM (fstream), &stream_template, GMIME_STREAM_FILE_TYPE, start, end);
+	g_mime_stream_construct (GMIME_STREAM (fstream), start, end);
 	
 	return GMIME_STREAM (fstream);
 }
